[package]
name = "cutis"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true
opt-level = 3
strip = "symbols"
lto = true

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
lazy_static = "1.4"
regex = "1.6.0"

exitcode = "1.1.2"
qr2term = "0.3"
dialoguer = "0.10.2"
indicatif = "0.17.0"
clap = { version = "3.2", features = ["derive", "cargo"] }
clap-verbosity-flag = "1.0.1"
humantime = "2.1.0"

directories = "4.0"

log = "0.4.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

blake3 = { version = "1.3", features = ["rayon"] }

png = "0.17"

futures = { version = "0.3" }
async-trait = "0.1"
tokio-stream = "0.1.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.2.1"

cookie = "0.16"
cookie_store = "0.16"
reqwest_cookie_store = "0.3"

[dependencies.reqwest]
version = "0.11"
features = ["json", "cookies", "brotli", "gzip", "deflate", "multipart"]

[dependencies.tokio]
version = "1.20"
default-features = false
features = ["rt-multi-thread", "io-util", "io-std", "macros"]
